--- a/iqware-platform-app/iqware-platform-app-restful/pom.xml
+++ b/iqware-platform-app/iqware-platform-app-restful/pom.xml
@@ -16,6 +16,13 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.iqwareinc.platform</groupId>
+			<artifactId>iqware-platform-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.iqwareinc.platform.core</groupId>
 			<artifactId>iqware-platform-core-datamanager</artifactId>
