--- a/iqware-platform-app/iqware-platform-app-restful/src/main/webapp/WEB-INF/web.xml
+++ b/iqware-platform-app/iqware-platform-app-restful/src/main/webapp/WEB-INF/web.xml
@@ -32,9 +32,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!-- Restful Servlet API -->
+	<!-- web application servlet -->
 	<servlet>
-		<servlet-name>restfulApi</servlet-name>
+		<servlet-name>webAppServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextClass</param-name>
@@ -42,13 +42,32 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>com.iqwareinc.platform.app.restful.configuration.RestfulServletContextConfiguration</param-value>
+			<param-value>com.iqwareinc.platform.app.restapi.configuration.WebServletContextConfiguration</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>restfulApi</servlet-name>
+		<servlet-name>webAppServlet</servlet-name>
 		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<!-- web application servlet -->
+	<servlet>
+		<servlet-name>restApiServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextClass</param-name>
+			<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+		</init-param>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>com.iqwareinc.platform.app.restapi.configuration.WebServletContextConfiguration</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>restApiServlet</servlet-name>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
