change datasource type and rename rest api artefact name

--- a/iqware-platform-app/iqware-platform-app-restful/pom.xml
+++ b/iqware-platform-app/iqware-platform-app-restful/pom.xml
@@ -6,8 +6,10 @@
 		<artifactId>iqware-platform-app</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>iqware-platform-app-restful</artifactId>
+	<artifactId>app</artifactId>
 	<packaging>war</packaging>
+
+	<name>IQWARE Platform Rest API</name>
 
 	<properties>
 		<java.servlet.version>2.5</java.servlet.version>
