--- a/iqware-platform-app/iqware-platform-app-restful/src/main/webapp/WEB-INF/config/persistence.properties
+++ b/iqware-platform-app/iqware-platform-app-restful/src/main/webapp/WEB-INF/config/persistence.properties
@@ -2,4 +2,4 @@ db.driver = com.mysql.jdbc.Driver
 db.conn.size = 5
 db.url = jdbc:mysql://localhost/pms_test
 db.username = root
-db.password = silanis1
+db.password = root
