add delete property + change properties to property for endpoint

--- a/iqware-platform-core/pom.xml
+++ b/iqware-platform-core/pom.xml
@@ -87,6 +87,11 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.iqwareinc.platform</groupId>
+			<artifactId>iqware-platform-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
